--- a/.gitignore
+++ b/.gitignore
@@ -161,6 +161,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 logs
-data
+data/*
 .ruff_cache
 .DS_Store
